[package]
name = "llmspell-debug"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Interactive debugging infrastructure for LLMSpell following Phase 9.1 architecture"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Internal dependencies - Phase 9.1 architecture
llmspell-bridge = { path = "../llmspell-bridge" }
llmspell-config = { path = "../llmspell-config" }
llmspell-core = { path = "../llmspell-core" }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

# Concurrency primitives
parking_lot = { workspace = true }
dashmap = { workspace = true }

# Time handling
chrono = { workspace = true }

# Lua integration for condition evaluation
mlua = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }

[lints]
workspace = true
