[package]
name = "llmspell-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["knowledge-graph", "temporal", "graph-database", "surrealdb", "llm"]
categories = ["database", "data-structures", "graph"]
description = "Bi-temporal knowledge graph with swappable backends for llmspell"

[dependencies]
# Core dependencies
llmspell-core = { path = "../llmspell-core" }
llmspell-utils = { path = "../llmspell-utils" }

# SurrealDB for graph storage (embedded mode with RocksDB)
surrealdb = { version = "2.0", features = ["kv-rocksdb"] }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time handling
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Concurrency (thread-safe caching)
parking_lot = "0.12"
dashmap = "5.5"

# UUID generation
uuid = { workspace = true }

# Regex for extraction
regex = "1.10"
once_cell = "1.19"

[dev-dependencies]
llmspell-testing = { path = "../llmspell-testing" }
tokio-test = "0.4"
mockall = { workspace = true }
criterion = { workspace = true }
tempfile = "3.9"
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[bench]]
name = "graph_bench"
harness = false

[lints]
workspace = true
