[package]
name = "llmspell-hooks"
description = "Hook and event system for rs-llmspell"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
llmspell-core = { path = "../llmspell-core" }
llmspell-utils = { path = "../llmspell-utils" }
llmspell-events = { path = "../llmspell-events" }
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
anyhow.workspace = true
tracing.workspace = true
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = "5.5"
parking_lot = "0.12"
rand = "0.8"
lru = "0.12"
serde_json.workspace = true
thiserror.workspace = true
log = "0.4"
bytes = "1.5"
lz4_flex = { workspace = true }
futures = "0.3"

[features]
default = []

[dev-dependencies]
llmspell-testing = { path = "../llmspell-testing" }
tokio-test = "0.4"
criterion = "0.5"
mockall = "0.12"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.8"
llmspell-agents = { path = "../llmspell-agents" }
llmspell-providers = { path = "../llmspell-providers" }
llmspell-core = { path = "../llmspell-core" }