[package]
name = "llmspell-providers"
description = "LLM provider integrations for rs-llmspell"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
llmspell-core = { path = "../llmspell-core" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
rig-core.workspace = true
ollama-rs = "0.3.2"
url = "2"
chrono.workspace = true
candle-core.workspace = true
candle-transformers.workspace = true
hf-hub.workspace = true
tokenizers.workspace = true
parking_lot.workspace = true
rand.workspace = true
dirs = "5.0"
ureq = "2.12"