[package]
name = "llmspell-repl"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Client-side REPL interface for LLMSpell kernel connections"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Additional dependencies needed by client.rs
uuid = { workspace = true }
chrono = { workspace = true }

# Internal dependencies - now depends on llmspell-kernel instead of engine
llmspell-kernel = { path = "../llmspell-kernel" }
llmspell-config = { path = "../llmspell-config" }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }


[lints]
workspace = true
