[package]
name = "llmspell-sessions"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Session and artifact management for rs-llmspell"

[dependencies]
# Core dependencies - existing infrastructure only
llmspell-core = { path = "../llmspell-core" }
llmspell-state-persistence = { path = "../llmspell-state-persistence" }
llmspell-state-traits = { path = "../llmspell-state-traits" }
llmspell-storage = { path = "../llmspell-storage" }
llmspell-hooks = { path = "../llmspell-hooks" }
llmspell-events = { path = "../llmspell-events" }
llmspell-utils = { path = "../llmspell-utils" }

# Required external dependencies (already in workspace)
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# UUID for session IDs
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Compression for artifacts
lz4_flex = { workspace = true }

# Hashing for artifact deduplication
blake3 = { workspace = true }

# LRU cache for metadata
lru = "0.12"

[dev-dependencies]
llmspell-testing = { path = "../llmspell-testing" }
criterion = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
rand = "0.8"

[[bench]]
name = "session_benchmarks"
harness = false

