[package]
name = "llmspell-state-persistence"
description = "Persistent state management for rs-llmspell with hook integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
unicode-normalization = "0.1"
bincode = "1.3"
regex = "1.11"
once_cell = "1.20"

# Serialization
rmp-serde = "1.3"

# Compression libraries
flate2 = "1.0"
zstd = "0.13"
lz4 = "1.24"
brotli = "3.5"

# Crypto for checksums
sha2 = "0.10"

# Random for backup IDs
rand = "0.8"

# Performance optimizations
crossbeam-skiplist = "0.1"

# Internal dependencies
llmspell-storage = { path = "../llmspell-storage" }
llmspell-hooks = { path = "../llmspell-hooks" }
llmspell-events = { path = "../llmspell-events" }

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"
