[package]
name = "llmspell-state-traits"
description = "State management traits and interfaces for rs-llmspell"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid = { version = "1.17", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }