[package]
name = "llmspell-storage"
description = "State management and persistence for rs-llmspell"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
llmspell-core = { path = "../llmspell-core" }
llmspell-graph = { path = "../llmspell-graph", optional = true } # Phase 13b.5.2: For graph types
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
sled.workspace = true
dashmap = "5.5"
parking_lot = "0.12"
uuid = { workspace = true }
chrono = { workspace = true } # Phase 13b.5.2: For bi-temporal timestamps
tempfile = { workspace = true, optional = true }

# HNSW implementation dependencies
hnsw_rs = { version = "0.3.2" }
rmp-serde = { version = "1.1" }

# PostgreSQL dependencies (Phase 13b.2 - optional)
tokio-postgres = { workspace = true, optional = true }
deadpool-postgres = { workspace = true, optional = true }
pgvector = { workspace = true, optional = true }
refinery = { workspace = true, optional = true }

[features]
default = []
postgres = ["tokio-postgres", "deadpool-postgres", "pgvector", "refinery", "llmspell-graph"]

[dev-dependencies]
tempfile.workspace = true
rand = "0.8"
criterion = { workspace = true }

[[bench]]
name = "graph_bench"
harness = false