[package]
name = "llmspell-storage"
description = "State management and persistence for rs-llmspell"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
llmspell-core = { path = "../llmspell-core" }
llmspell-graph = { path = "../llmspell-graph", optional = true } # Phase 13b.5.2: For graph types
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true # Phase 13b.14: For migration plan TOML (replaced YAML)
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
sled.workspace = true
dashmap = "5.5"
parking_lot = "0.12"
uuid = { workspace = true }
chrono = { workspace = true } # Phase 13b.5.2: For bi-temporal timestamps
tempfile = { workspace = true, optional = true }
rand.workspace = true # Phase 13b.14: For checksum sampling

# HNSW implementation dependencies
hnsw_rs = { version = "0.3.2" }
# Phase 13c.1.7: rmp-serde kept (used in hnsw.rs for HNSW index persistence)
# MessagePack format provides compact binary serialization for vector indices
rmp-serde = { version = "1.1" }

# PostgreSQL dependencies (Phase 13b.2 - optional)
tokio-postgres = { workspace = true, optional = true }
deadpool-postgres = { workspace = true, optional = true }
pgvector = { workspace = true, optional = true }
refinery = { workspace = true, optional = true }

# SQLite dependencies (Phase 13c.2 - optional)
libsql = { workspace = true, optional = true }
r2d2 = { workspace = true, optional = true }
r2d2_sqlite = { workspace = true, optional = true }

# Phase 13b.14: sha2 required for migration checksums (not postgres-only)
sha2 = "0.10"

[features]
default = []
postgres = ["tokio-postgres", "deadpool-postgres", "pgvector", "refinery", "llmspell-graph"]
sqlite = ["libsql", "r2d2", "r2d2_sqlite"]

[dev-dependencies]
tempfile.workspace = true
rand = "0.8"
criterion = { workspace = true }
# Phase 13c.1.6: blake3 removed (use sha2 for content hashing in tests)
sha2 = "0.10"

[[bench]]
name = "graph_bench"
harness = false