[package]
name = "llmspell-storage"
description = "State management and persistence for rs-llmspell"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
llmspell-core = { path = "../llmspell-core" }
llmspell-graph = { path = "../llmspell-graph", optional = true } # Phase 13b.5.2: For graph types
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true # Phase 13b.14: For migration plan TOML (replaced YAML)
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap = "5.5"
parking_lot = "0.12"
uuid = { workspace = true }
chrono = { workspace = true } # Phase 13b.5.2: For bi-temporal timestamps
tempfile = { workspace = true, optional = true }
rand.workspace = true # Phase 13b.14: For checksum sampling
lz4_flex.workspace = true # Phase 13c.2.7: For hook history compression
base64 = "0.22" # Phase 13c.3.2.1: For export/import large object base64 encoding

# PostgreSQL dependencies (Phase 13b.2 - optional)
tokio-postgres = { workspace = true, optional = true }
deadpool-postgres = { workspace = true, optional = true }
pgvector = { workspace = true, optional = true }
refinery = { workspace = true, optional = true }

# Database Backends
# Switch to standard rusqlite for static linking compatibility
rusqlite = { version = "0.32", features = ["bundled", "vtab"], optional = true }
r2d2 = { workspace = true, optional = true }
# libsql dependency removed to solve ABI mismatch
# libsql = { version = "0.9", default-features = false, features = ["core", "replication"], optional = true }

# Vector Search (Static Linking)
vectorlite-rs = { path = "../vectorlite-rs", optional = true }
zerocopy = { workspace = true, optional = true, features = ["derive"] }

# Phase 13b.14: sha2 required for migration checksums (not postgres-only)
sha2 = "0.10"

[features]
default = []
postgres = ["tokio-postgres", "deadpool-postgres", "pgvector", "refinery", "llmspell-graph", "llmspell-core/postgres"]
sqlite = ["rusqlite", "r2d2", "zerocopy", "vectorlite-rs", "llmspell-graph"]

[dev-dependencies]
tempfile.workspace = true
rand = "0.8"
criterion = { workspace = true }
# Phase 13c.1.6: blake3 removed (use sha2 for content hashing in tests)
sha2 = "0.10"
# Phase 13c.2.2: Standard rusqlite for tests
rusqlite = { version = "0.32", features = ["bundled"] }

[[bench]]
name = "graph_bench"
harness = false

[[bench]]
name = "sqlite_vector_bench"
harness = false
required-features = ["sqlite"]