[package]
name = "llmspell-templates"
description = "Production-ready AI agent workflow templates for rs-llmspell"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
llmspell-core = { path = "../llmspell-core" }
llmspell-config = { path = "../llmspell-config" }
llmspell-kernel = { path = "../llmspell-kernel" }
llmspell-agents = { path = "../llmspell-agents" }
llmspell-workflows = { path = "../llmspell-workflows" }
llmspell-tools = { path = "../llmspell-tools" }
llmspell-rag = { path = "../llmspell-rag" }
llmspell-tenancy = { path = "../llmspell-tenancy" }
llmspell-providers = { path = "../llmspell-providers" }
llmspell-utils = { path = "../llmspell-utils" }
llmspell-memory = { path = "../llmspell-memory" }

# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
jsonschema.workspace = true
once_cell.workspace = true

[dev-dependencies]
llmspell-testing = { path = "../llmspell-testing" }
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
criterion = { workspace = true, features = ["async_tokio"] }
serial_test.workspace = true
